@@ -6,6 +6,7 @@
   connect. Bug #801678.
 - Memory tracking is now disabled for Symbian builds due to lack of malloc.h.
 - Fix memory tracking compilation for kFreeBSD.
+- Python callbacks can now be used with class member functions.
 
 0.11.2 - 20110626
 =================
